# efi-spoofer

./: CMakeLists.txt  main.c  smbios.h  smbios_structures.h
